# tokenlens

./: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
docs/: adding-the-eval-harness.md
tests/: test_eval.py  test_pipeline.py
tokenlens/: __init__.py  bench.py  cli.py  dashboard.py  pricing.py  proxy.py  stats.py
tokenlens/compress/: __init__.py  estimate.py  llmlingua2.py  pipeline.py  safe.py
tokenlens/eval/: __init__.py  api.py  harness.py  judge.py  report.py  tasks.py
tokenlens/eval/goldens/: default.jsonl
